<resources>
    <string name="app_name">Patient</string>
    <string name="internal_storage">Internal storage</string>
    <string name="please_enter_message">please enter message</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_want_to_log_out">Are you sure want to log out?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="status">Status</string>
    <string name="dollar">$ </string>
    <string name="menu_home">Home</string>
    <string name="profile">Profile</string>
    <string name="email">Email</string>
    <string name="create">CREATE</string>
    <string name="store_name">Store Name</string>
    <string name="last_name">Last Name</string>
    <string name="my_profile">My Profile</string>
    <string name="welcome_text">Hey,\nLogin Now.</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="first_name_last_name">
<![CDATA[ First Name & Last Name ]]>
</string>
    <string name="first_name">First Name</string>
    <string name="lase_name">Lase Name</string>
    <string name="email_address">Email Address</string>
    <string name="create_password">Create Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="next">NEXT</string>
    <string name="select">Select</string>
    <string name="doctor">Doctor</string>
    <string name="nurse">Nurse</string>
    <string name="speciality">Speciality</string>
    <string name="select_a_field_of_speciality">Select a field of speciality</string>
    <string name="hospitals">Hospitals</string>
    <string name="list_of_hospitals">List of Hospitals</string>
    <string name="search_speciality_or_hospitals">Search Speciality or Hospitals</string>
    <string name="search">Search</string>
    <string name="consultation_sessions">Consultation Sessions</string>
    <string name="consultation">Consultation</string>
    <string name="concern">Concern</string>
    <string name="medications_prescribed">Medications Prescribed</string>
    <string name="doctor_notes">Doctor Notes</string>
    <string name="nurse_notes">Nurse Notes</string>
    <string name="select_nurse">Select Nurse</string>
    <string name="doctor_prescription">Doctor Prescription</string>
    <string name="edit_medications">Edit Medications</string>
    <string name="add_new">+ <u>Add New</u></string>
    <string name="save">Save</string>
    <string name="Hospital">Hospital</string>
    <string name="Doctor_Info">Doctor Information</string>
    <string name="Doctor_name">DoctorName</string>
    <string name="sr_cardiolo">Sr.Cardialo</string>
    <string name="book_appointment">BOOK AN APPOINTMENT</string>
    <string name="About">About</string>
    <string name="available_slots">Available Slots</string>
    <string name="when_will_you_visit">When will you visit?</string>
    <string name="consulation_cost">Consultation Cost</string>
    <string name="Which_time">Which time?</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>
    <string name="select_concern">Select Concern</string>
    <string name="consultations">Consultations</string>
    <string name="upcoming">Upcoming</string>
    <string name="slot_details">Slot Details</string>
    <string name="past">Past</string>
    <string name="location">Location</string>
    <string name="concern_details">Concern Details</string>
    <string name="content_prescribed">Content Prescribed</string>
    <string name="basic_patient_info">Basic Patient Info</string>
    <string name="illness">Existing Illness/Condition</string>
    <string name="medications_currently_taking">Medications Currently Taking</string>
    <string name="add_illness_condition">+ Add Illness Condition</string>
    <string name="add_illness_condition_menu">Add Illness Condition</string>
    <string name="lisofhospitals">List Of Hospitals</string>
    <string name="gender">Gender</string>
    <string name="role">Role</string>
    <string name="dob">DOB</string>
    <string name="patient_info">Patient Info</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="medication_names">Medication names</string>
    <string name="noon">Noon</string>
    <string name="please_select_slot">Please Select your Slot</string>
    <string name="please_select_date">Please Select the Date</string>
    <string name="please_select_concern">Please Select the Concern</string>
    <string name="PM">PM</string>

</resources>