<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="DoctorInfo"
            type="com.wekanmdb.storeinventory.ui.doctorInfo.DoctorInfoViewModel" />

    </data>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/include"
        layout="@layout/common_toolbar"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        style="@style/text_style_semibold_17sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Doctor_Info"
        app:layout_constraintBottom_toBottomOf="@+id/include"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/include"/>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/imageView_hospital"
        android:layout_width="220dp"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textview_doctorname"
        style="@style/text_style_semibold_18sp"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"

        android:layout_marginEnd="16dp"
        android:gravity="start"
        android:lineSpacingExtra="-5sp"
        android:text="@string/Doctor_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_hospital" />

    <TextView
        android:id="@+id/sr_cardiolo"
        style="@style/text_style_regular_14sp"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:lineSpacingExtra="1sp"
        android:text="@string/sr_cardiolo"
        android:translationY="-0.5sp"
        app:layout_constraintEnd_toEndOf="@+id/textview_doctorname"
        app:layout_constraintStart_toStartOf="@+id/textview_doctorname"
        app:layout_constraintTop_toBottomOf="@+id/textview_doctorname" />

    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@color/view_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sr_cardiolo" />

    <TextView
        android:id="@+id/textview_about"
        style="@style/text_style_semibold_18sp"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:gravity="top"
        android:lineSpacingExtra="-5sp"
        android:text="@string/About"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <TextView
        android:id="@+id/textview_about_desc"
        style="@style/text_style_regular_14sp"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/edittext_bg_gray"
        android:gravity="top"
        android:lineSpacingExtra="1sp"
        android:padding="4dp"
        android:text="@string/About"
        android:translationY="-0.5sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_book_appointment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_about"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_book_appointment"
        android:layout_width="310dp"
        android:layout_height="45dp"
        android:layout_marginBottom="24dp"
        android:text="@string/book_appointment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>