<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="android.view.View" />

        <variable
            name="listOfHospitals"
            type="com.wekanmdb.storeinventory.ui.listOfHospitals.ListOfHospitalViewModel" />


    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/hospitals"
            style="@style/text_style_semibold_17sp"
            app:layout_constraintEnd_toEndOf="@+id/toolbar"
            app:layout_constraintHorizontal_bias="0.525"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginTop="16dp"
            android:text=""
            android:src="@drawable/ic_baseline_menu_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/et_search"
            style="@style/text_style_semibold_14sp"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/edittext_bg_gray_corner"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/search_speciality_or_hospitals"
            android:inputType="textPersonName"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview" />

        <TextView
            android:id="@+id/textview1"
            style="@style/text_style_semibold_14sp"
            android:layout_width="235dp"
            android:layout_height="35dp"
            android:layout_marginTop="19dp"
            android:layout_marginRight="118dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:layout_alignParentTop="true"
            android:text="@string/lisofhospitals"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_search"
            android:lineSpacingExtra="6sp"
            android:translationY="-2.75sp"
            android:gravity="top" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_of_hospital_recycler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview1"
            tools:listitem="@layout/item_hospital" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>